# poc_agent

./: .gitignore  Failure-Handling Strategies for AI Agents After Retries  Fallbacks, Human-in-the-Loop Escalation, and Alerting (1).md  agent_poc.py  agentpoc2.py  ai-agent-observability-stakeholder.md  docker-compose.yml  main.py  otel-collector-config.yaml  pyproject.toml  requirements.txt  telemetry.py
